--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
     "lint": "eslint ./ --ignore-path .gitignore",
     "lint-fix": "npm run lint -- --fix",
     "prepare": "if [ -d .git ]; then npm-merge-driver install; fi",
-    "prettify": "prettier --write \"**/*.{js,jsx,json,css,scss,md}\"",
+    "prettify": "prettier --write \"**/*.{js,jsx,json,css,scss,md,graphql}\"",
     "postinstall": "touch secrets.js",
     "seed": "node script/seed.js",
     "start": "node server",
     "start-dev": "NODE_ENV='development' npm run build-client-watch & NODE_ENV='development' npm run start-server",
     "start-server": "nodemon server -e html,js,scss --ignore public --ignore client",
+    "start-webpack": "nodemon --watch config --exec 'webpack-dev-server --config ./webpack.config.js'",
     "test": "NODE_ENV='test' mocha \"./server/**/*.spec.js\" \"./client/**/*.spec.js\" \"./script/**/*.spec.js\" --require @babel/polyfill --require @babel/register"
   },
   "husky": {
@@ -28,7 +29,7 @@
     }
   },
   "lint-staged": {
-    "*.{js,jsx}": [
+    "*.{js,jsx,graphql}": [
       "prettier --write",
       "npm run lint-fix",
       "git add"
@@ -41,6 +42,7 @@
   "author": "Fullstack Academy of Code",
   "license": "MIT",
   "dependencies": {
+    "apollo-datasource-rest": "^0.6.4",
     "apollo-server": "^2.9.4",
     "apollo-server-express": "^2.9.4",
     "axios": "^0.19.0",
@@ -60,13 +62,16 @@
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-native": "^0.61.1",
+    "react-native-web": "^0.11.7",
     "react-redux": "^7.0.1",
     "react-router-dom": "^5.0.0",
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "sequelize": "^5.3.1",
-    "socket.io": "^2.2.0"
+    "socket.io": "^2.2.0",
+    "webpack-dev-server": "^3.8.1"
   },
   "devDependencies": {
     "@babel/core": "^7.4.3",
