--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "lint": "eslint ./ --ignore-path .gitignore",
     "lint-fix": "npm run lint -- --fix",
     "prepare": "if [ -d .git ]; then npm-merge-driver install; fi",
-    "prettify": "prettier --write \"**/*.{js,jsx,json,css,scss,md,graphql}\"",
+    "prettify": "prettier --write \"**/*.{js,jsx,json,css,scss,md}\"",
     "postinstall": "touch secrets.js",
     "seed": "node script/seed.js",
     "start": "node server",
@@ -29,7 +29,7 @@
     }
   },
   "lint-staged": {
-    "*.{js,jsx,graphql}": [
+    "*.{js,jsx}": [
       "prettier --write",
       "npm run lint-fix",
       "git add"
